Fixed minor bug with close icon not showing

--- a/app/frontend/src/App.css
+++ b/app/frontend/src/App.css
@@ -44,7 +44,7 @@
     padding: 0px;
   }
 
-  .close-icon {
+  .close-icon-hide-mobile {
     display: none;
   }
 
